preprossing_save csv last commit

--- a/EDA_04_02_22.ipynb
+++ b/EDA_04_02_22.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -216,7 +216,7 @@
        "5  19.6326     14.9     0  "
       ]
      },
-     "execution_count": 20,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -227,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -361,7 +361,7 @@
        "2208  19.1386     14.9     0  "
       ]
      },
-     "execution_count": 28,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -372,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -407,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -426,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -446,13 +446,449 @@
        " 'C_PAR']"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "list(fpc11_raw_data_light_temp_ph.columns)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n",
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(fpc11_raw_data_light_temp_ph.isnull().values.any())\n",
+    "print(fpc11_raw_data_light_temp_ph.isnull().sum().sum())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Date_Time</th>\n",
+       "      <th>us</th>\n",
+       "      <th>QT</th>\n",
+       "      <th>QC</th>\n",
+       "      <th>QB</th>\n",
+       "      <th>QR</th>\n",
+       "      <th>QG</th>\n",
+       "      <th>QT_corr</th>\n",
+       "      <th>TT0</th>\n",
+       "      <th>TT1</th>\n",
+       "      <th>pH</th>\n",
+       "      <th>C_PAR</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>2208</td>\n",
+       "      <td>2208</td>\n",
+       "      <td>2208</td>\n",
+       "      <td>2208</td>\n",
+       "      <td>2208</td>\n",
+       "      <td>2208</td>\n",
+       "      <td>2208</td>\n",
+       "      <td>2208</td>\n",
+       "      <td>2208</td>\n",
+       "      <td>2208</td>\n",
+       "      <td>2208</td>\n",
+       "      <td>2208</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>unique</th>\n",
+       "      <td>2208</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1821</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2208</td>\n",
+       "      <td>1900</td>\n",
+       "      <td>2101</td>\n",
+       "      <td>436</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>top</th>\n",
+       "      <td>12/12/2021 10:41:24</td>\n",
+       "      <td>0</td>\n",
+       "      <td>72.9</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>-384.457</td>\n",
+       "      <td>21</td>\n",
+       "      <td>18.9257</td>\n",
+       "      <td>14.9</td>\n",
+       "      <td>38.4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>freq</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2208</td>\n",
+       "      <td>39</td>\n",
+       "      <td>2208</td>\n",
+       "      <td>2208</td>\n",
+       "      <td>2208</td>\n",
+       "      <td>2208</td>\n",
+       "      <td>1</td>\n",
+       "      <td>50</td>\n",
+       "      <td>3</td>\n",
+       "      <td>984</td>\n",
+       "      <td>948</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                  Date_Time    us    QT    QC    QB    QR    QG   QT_corr  \\\n",
+       "count                  2208  2208  2208  2208  2208  2208  2208      2208   \n",
+       "unique                 2208     1  1821     1     1     1     1      2208   \n",
+       "top     12/12/2021 10:41:24     0  72.9   100   100   100   100  -384.457   \n",
+       "freq                      1  2208    39  2208  2208  2208  2208         1   \n",
+       "\n",
+       "         TT0      TT1    pH C_PAR  \n",
+       "count   2208     2208  2208  2208  \n",
+       "unique  1900     2101   436     8  \n",
+       "top       21  18.9257  14.9  38.4  \n",
+       "freq      50        3   984   948  "
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fpc11_raw_data_light_temp_ph.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Date_Time</th>\n",
+       "      <th>QT</th>\n",
+       "      <th>QC</th>\n",
+       "      <th>QB</th>\n",
+       "      <th>QR</th>\n",
+       "      <th>QG</th>\n",
+       "      <th>QT_corr</th>\n",
+       "      <th>TT0</th>\n",
+       "      <th>TT1</th>\n",
+       "      <th>pH</th>\n",
+       "      <th>C_PAR</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>2208</td>\n",
+       "      <td>2208</td>\n",
+       "      <td>2208</td>\n",
+       "      <td>2208</td>\n",
+       "      <td>2208</td>\n",
+       "      <td>2208</td>\n",
+       "      <td>2208</td>\n",
+       "      <td>2208</td>\n",
+       "      <td>2208</td>\n",
+       "      <td>2208</td>\n",
+       "      <td>2208</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>unique</th>\n",
+       "      <td>2208</td>\n",
+       "      <td>1821</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2208</td>\n",
+       "      <td>1900</td>\n",
+       "      <td>2101</td>\n",
+       "      <td>436</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>top</th>\n",
+       "      <td>12/12/2021 10:41:24</td>\n",
+       "      <td>72.9</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>-384.457</td>\n",
+       "      <td>21</td>\n",
+       "      <td>18.9257</td>\n",
+       "      <td>14.9</td>\n",
+       "      <td>38.4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>freq</th>\n",
+       "      <td>1</td>\n",
+       "      <td>39</td>\n",
+       "      <td>2208</td>\n",
+       "      <td>2208</td>\n",
+       "      <td>2208</td>\n",
+       "      <td>2208</td>\n",
+       "      <td>1</td>\n",
+       "      <td>50</td>\n",
+       "      <td>3</td>\n",
+       "      <td>984</td>\n",
+       "      <td>948</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                  Date_Time    QT    QC    QB    QR    QG   QT_corr   TT0  \\\n",
+       "count                  2208  2208  2208  2208  2208  2208      2208  2208   \n",
+       "unique                 2208  1821     1     1     1     1      2208  1900   \n",
+       "top     12/12/2021 10:41:24  72.9   100   100   100   100  -384.457    21   \n",
+       "freq                      1    39  2208  2208  2208  2208         1    50   \n",
+       "\n",
+       "            TT1    pH C_PAR  \n",
+       "count      2208  2208  2208  \n",
+       "unique     2101   436     8  \n",
+       "top     18.9257  14.9  38.4  \n",
+       "freq          3   984   948  "
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fpc11_raw_data_light_temp_ph = fpc11_raw_data_light_temp_ph.drop(['us'], axis = 1)\n",
+    "fpc11_raw_data_light_temp_ph.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fpc11_raw_data_light_temp_ph.to_csv(r'processed_data/FPC11_light_temp_ph.csv', index = False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "        ================================================================================================================================="
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>QT</th>\n",
+       "      <th>QC</th>\n",
+       "      <th>QB</th>\n",
+       "      <th>QR</th>\n",
+       "      <th>QG</th>\n",
+       "      <th>QT_corr</th>\n",
+       "      <th>TT0</th>\n",
+       "      <th>TT1</th>\n",
+       "      <th>pH</th>\n",
+       "      <th>C_PAR</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Date_Time</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2021-12-12 10:41:24</th>\n",
+       "      <td>73.0961</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>-384.457</td>\n",
+       "      <td>21.3000</td>\n",
+       "      <td>19.2444</td>\n",
+       "      <td>14.9000</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-12-12 11:14:00</th>\n",
+       "      <td>73.0557</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>-384.474</td>\n",
+       "      <td>21.2746</td>\n",
+       "      <td>19.4091</td>\n",
+       "      <td>14.9000</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-12-12 11:46:36</th>\n",
+       "      <td>73.0341</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>-384.491</td>\n",
+       "      <td>21.4845</td>\n",
+       "      <td>19.6082</td>\n",
+       "      <td>14.9001</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-12-12 12:19:12</th>\n",
+       "      <td>73.0688</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>-384.508</td>\n",
+       "      <td>21.3992</td>\n",
+       "      <td>19.4752</td>\n",
+       "      <td>14.9000</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-12-12 12:51:48</th>\n",
+       "      <td>72.9612</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>-384.524</td>\n",
+       "      <td>21.5431</td>\n",
+       "      <td>19.6326</td>\n",
+       "      <td>14.9000</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                          QT   QC   QB   QR   QG  QT_corr      TT0      TT1  \\\n",
+       "Date_Time                                                                     \n",
+       "2021-12-12 10:41:24  73.0961  100  100  100  100 -384.457  21.3000  19.2444   \n",
+       "2021-12-12 11:14:00  73.0557  100  100  100  100 -384.474  21.2746  19.4091   \n",
+       "2021-12-12 11:46:36  73.0341  100  100  100  100 -384.491  21.4845  19.6082   \n",
+       "2021-12-12 12:19:12  73.0688  100  100  100  100 -384.508  21.3992  19.4752   \n",
+       "2021-12-12 12:51:48  72.9612  100  100  100  100 -384.524  21.5431  19.6326   \n",
+       "\n",
+       "                          pH  C_PAR  \n",
+       "Date_Time                            \n",
+       "2021-12-12 10:41:24  14.9000    0.0  \n",
+       "2021-12-12 11:14:00  14.9000    0.0  \n",
+       "2021-12-12 11:46:36  14.9001    0.0  \n",
+       "2021-12-12 12:19:12  14.9000    0.0  \n",
+       "2021-12-12 12:51:48  14.9000    0.0  "
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fpc11_TS_light_temp_ph = pd.read_csv(\"processed_data\\FPC11_light_temp_ph.csv\", parse_dates=True, index_col = \"Date_Time\")\n",
+    "fpc11_TS_light_temp_ph.head()"
    ]
   }
  ],
