--- a/EDA_04_02_22.ipynb
+++ b/EDA_04_02_22.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -223,7 +223,7 @@
        "5  19.6326     14.9     0  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -234,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -368,7 +368,7 @@
        "2208  19.1386     14.9     0  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -379,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -414,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -433,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -453,7 +453,7 @@
        " 'C_PAR']"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -464,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -483,7 +483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -600,7 +600,7 @@
        "freq      50        3   984   948  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -611,7 +611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -723,7 +723,7 @@
        "freq          3   984   948  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -735,7 +735,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -744,7 +744,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -881,7 +881,7 @@
        "2021-12-12 12:51:48  14.9000    0.0  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -907,7 +907,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -917,7 +917,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -1039,7 +1039,7 @@
        "4   -0.124244       0    0.0  "
       ]
      },
-     "execution_count": 31,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1050,7 +1050,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -1172,7 +1172,7 @@
        "2207  22.6539   3.0382    0.0  "
       ]
      },
-     "execution_count": 32,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1183,7 +1183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -1216,7 +1216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -1356,7 +1356,7 @@
        "max     472.570000  "
       ]
      },
-     "execution_count": 34,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1367,7 +1367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -1433,7 +1433,7 @@
        "freq                      1     48     184"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1444,7 +1444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -1463,7 +1463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -1481,7 +1481,7 @@
        " 'C_PAR']"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1492,7 +1492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
@@ -1511,7 +1511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1520,7 +1520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
@@ -1636,7 +1636,7 @@
        "4       0    0.0  "
       ]
      },
-     "execution_count": 41,
+     "execution_count": 82,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1647,7 +1647,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
@@ -1664,7 +1664,7 @@
        " 'C_PAR']"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 83,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1675,7 +1675,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1698,7 +1698,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1707,7 +1707,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
@@ -1841,7 +1841,7 @@
        "4   0.040000  0.989565  1.62471 -0.018697    0.0  "
       ]
      },
-     "execution_count": 46,
+     "execution_count": 86,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1852,7 +1852,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1861,7 +1861,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
@@ -1989,7 +1989,7 @@
        "4   0.040000  0.989565  1.62471 -0.018697    0.0  "
       ]
      },
-     "execution_count": 48,
+     "execution_count": 88,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2000,7 +2000,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
@@ -2128,7 +2128,7 @@
        "2207  0.040000  1.78949   9.24087  0.340184    0.0  "
       ]
      },
-     "execution_count": 49,
+     "execution_count": 89,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2139,7 +2139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
@@ -2173,7 +2173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
@@ -2340,7 +2340,7 @@
        "max      40.778200     3.338900    17.892900     1.110930   472.570000  "
       ]
      },
-     "execution_count": 51,
+     "execution_count": 91,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2351,7 +2351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
@@ -2370,7 +2370,7 @@
        " 'C_PAR']"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 92,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2381,7 +2381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
@@ -2400,7 +2400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2423,7 +2423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2432,7 +2432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
@@ -2615,7 +2615,7 @@
        "4   -0.124244       0      0.0  "
       ]
      },
-     "execution_count": 57,
+     "execution_count": 96,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2626,7 +2626,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
@@ -2668,7 +2668,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
@@ -2687,7 +2687,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
@@ -2706,7 +2706,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2715,7 +2715,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [
     {
@@ -2913,7 +2913,7 @@
        "[5 rows x 29 columns]"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 101,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2924,7 +2924,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [
     {
@@ -3122,7 +3122,7 @@
        "[5 rows x 29 columns]"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 102,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3133,7 +3133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [
     {
@@ -3150,7 +3150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [
     {
@@ -3169,7 +3169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [
     {
@@ -3221,7 +3221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [
     {
@@ -3258,7 +3258,7 @@
        " 'C_PAR']"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 106,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3269,7 +3269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3278,10 +3278,179 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 108,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 108,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "FPC11_12_12_21_to_31_01_22['C_PAR'].equals(FPC11_12_12_21_to_31_01_22['C_PAR_y'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 113,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 113,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "FPC11_12_12_21_to_31_01_22['C_PAR_y'].equals(FPC11_12_12_21_to_31_01_22['C_PAR_x'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 114,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 114,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "FPC11_12_12_21_to_31_01_22['C_PAR'].equals(FPC11_12_12_21_to_31_01_22['C_PAR_x'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 111,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "FPC11_12_12_21_to_31_01_22 = FPC11_12_12_21_to_31_01_22.astype({\"C_PAR_x\": float})\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 112,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Int64Index: 2208 entries, 0 to 2207\n",
+      "Data columns (total 29 columns):\n",
+      " #   Column     Non-Null Count  Dtype  \n",
+      "---  ------     --------------  -----  \n",
+      " 0   Date_Time  2208 non-null   object \n",
+      " 1   QT         2208 non-null   object \n",
+      " 2   QC         2208 non-null   object \n",
+      " 3   QB         2208 non-null   object \n",
+      " 4   QR         2208 non-null   object \n",
+      " 5   QG         2208 non-null   object \n",
+      " 6   QT_corr    2208 non-null   object \n",
+      " 7   TT0        2208 non-null   object \n",
+      " 8   TT1        2208 non-null   object \n",
+      " 9   pH         2208 non-null   object \n",
+      " 10  C_PAR_x    2208 non-null   float64\n",
+      " 11  LReactor   2208 non-null   float64\n",
+      " 12  C_g        2208 non-null   float64\n",
+      " 13  C_Eff      2208 non-null   float64\n",
+      " 14  C_CD       2208 non-null   float64\n",
+      " 15  T_CD       2208 non-null   int64  \n",
+      " 16  C_D_g      2208 non-null   object \n",
+      " 17  C_D_Eff    2208 non-null   object \n",
+      " 18  C_PAR_y    2208 non-null   float64\n",
+      " 19  FT1        2208 non-null   float64\n",
+      " 20  FT2        2208 non-null   float64\n",
+      " 21  PT1_V4     2208 non-null   float64\n",
+      " 22  PT2        2208 non-null   float64\n",
+      " 23  FT3        2208 non-null   float64\n",
+      " 24  CO2in      2208 non-null   float64\n",
+      " 25  CO2_V2     2208 non-null   float64\n",
+      " 26  CO2sys     2208 non-null   float64\n",
+      " 27  LT1        2208 non-null   float64\n",
+      " 28  C_PAR      2208 non-null   float64\n",
+      "dtypes: float64(16), int64(1), object(12)\n",
+      "memory usage: 517.5+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "FPC11_12_12_21_to_31_01_22.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 115,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "FPC11_12_12_21_to_31_01_22 = FPC11_12_12_21_to_31_01_22.drop(['C_PAR_x', 'C_PAR_y'], axis = 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 116,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Date_Time',\n",
+       " 'QT',\n",
+       " 'QC',\n",
+       " 'QB',\n",
+       " 'QR',\n",
+       " 'QG',\n",
+       " 'QT_corr',\n",
+       " 'TT0',\n",
+       " 'TT1',\n",
+       " 'pH',\n",
+       " 'LReactor',\n",
+       " 'C_g',\n",
+       " 'C_Eff',\n",
+       " 'C_CD',\n",
+       " 'T_CD',\n",
+       " 'C_D_g',\n",
+       " 'C_D_Eff',\n",
+       " 'FT1',\n",
+       " 'FT2',\n",
+       " 'PT1_V4',\n",
+       " 'PT2',\n",
+       " 'FT3',\n",
+       " 'CO2in',\n",
+       " 'CO2_V2',\n",
+       " 'CO2sys',\n",
+       " 'LT1',\n",
+       " 'C_PAR']"
+      ]
+     },
+     "execution_count": 116,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(FPC11_12_12_21_to_31_01_22.columns)"
+   ]
   }
  ],
  "metadata": {
