--- a/EDA_04_02_22.ipynb
+++ b/EDA_04_02_22.ipynb
@@ -34,7 +34,19 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'numpy'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\janakishyama\\Desktop\\DigitAlgae\\ESR10\\Artifact\\programming\\ESR_10\\EDA_04_02_22.ipynb Cell 4'\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/janakishyama/Desktop/DigitAlgae/ESR10/Artifact/programming/ESR_10/EDA_04_02_22.ipynb#ch0000003?line=0'>1</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mos\u001b[39;00m   \u001b[39m# for interacting with the operating system,  include many functions to interact with the file system\u001b[39;00m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/janakishyama/Desktop/DigitAlgae/ESR10/Artifact/programming/ESR_10/EDA_04_02_22.ipynb#ch0000003?line=1'>2</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mnumpy\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mnp\u001b[39;00m  \u001b[39m# Python library used for working with arrays\u001b[39;00m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/janakishyama/Desktop/DigitAlgae/ESR10/Artifact/programming/ESR_10/EDA_04_02_22.ipynb#ch0000003?line=2'>3</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mpandas\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mpd\u001b[39;00m  \u001b[39m#data manipulation and analysis\u001b[39;00m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/janakishyama/Desktop/DigitAlgae/ESR10/Artifact/programming/ESR_10/EDA_04_02_22.ipynb#ch0000003?line=3'>4</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mmatplotlib\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mmpl\u001b[39;00m\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'numpy'"
+     ]
+    }
+   ],
    "source": [
     "import os   # for interacting with the operating system,  include many functions to interact with the file system\n",
     "import numpy as np  # Python library used for working with arrays\n",
@@ -3981,7 +3993,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.8"
+   "version": "3.9.7"
   },
   "orig_nbformat": 4
  },
