--- a/EDA_04_02_22.ipynb
+++ b/EDA_04_02_22.ipynb
@@ -3971,7 +3971,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "gdfgfgfd"
+   ]
   }
  ],
  "metadata": {
