--- a/data_processing.ipynb
+++ b/data_processing.ipynb
@@ -9,19 +9,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 163,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os   # for interacting with the operating system,  include many functions to interact with the file system\n",
     "import numpy as np  # Python library used for working with arrays\n",
     "import pandas as pd  #data manipulation and analysis\n",
-    "import re"
+    "import re\n",
+    "\n",
+    "from datetime import date\n",
+    "today = date.today()\n",
+    "\n",
+    "from functools import reduce\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
@@ -30,7 +35,7 @@
        "'c:\\\\Users\\\\shyam.kalliadan\\\\Desktop\\\\ESR10\\\\programming\\\\ESR_10'"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 93,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -49,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 152,
    "metadata": {},
    "outputs": [
     {
@@ -124,45 +129,152 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 232,
    "metadata": {},
    "outputs": [],
    "source": [
     "def merger_function(dir,species_dir):\n",
-    "    print(dir)\n",
-    "    print(species_dir)\n",
-    "    #pd.merge(FPC11_merge1, FPC11_13_12_21_to_31_01_22_flow_and_pressure, on='Date_Time', how='inner')\n"
+    "    \n",
+    "    combined_df = pd.DataFrame()\n",
+    "    print(combined_df)\n",
+    "    temp_filename = re.split(\"\\\\\\\\\", species_dir)\n",
+    "    today_date = today.strftime(\"%b-%d-%Y\")\n",
+    "    combined_file_name = temp_filename[1] + '_' + today_date\n",
+    "\n",
+    "    for sensor_file in dir:\n",
+    "        processed_file_path = os.path.join(species_dir, sensor_file)\n",
+    "        print(processed_file_path)\n",
+    "        df_temp_data = pd.read_csv(processed_file_path)\n",
+    "        df_temp_data = df_temp_data.drop(['us'], axis = 1)\n",
+    "\n",
+    "        if combined_df.empty:\n",
+    "            combined_df = df_temp_data\n",
+    "        else:\n",
+    "            combined_df=pd.merge(combined_df, df_temp_data, on='Date_Time', how='inner')\n",
+    "\n",
+    "    print('----------------------------------')\n",
+    "    combined_df = combined_df.drop(['C_PAR_x', 'C_PAR_y'], axis = 1)\n",
+    "    print(combined_df.info())\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "    \n",
+    "\n",
+    "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 233,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['FPC11-Rhodomonas-salina_12_12_21_to_31_01_22_light_temp_ph.csv', 'FPC11-Rhodomonas-salina_12_12_21_to_31_01_22_productivity_efficiencycsv.csv', 'FPC11-Rhodomonas-salina_13_12_21_to_31_01_22_flow_and_pressure.csv']\n",
-      "./processed_data\\FPC11-Rhodomonas-salina\n",
-      "['FPC12-Diacronema-lutheri_24_10_21_to_01_02_22light_temp_ph.csv', 'FPC12-Diacronema-lutheri_24_10_21_to_01_02_flow_and_pressure.csv', 'FPC12-Diacronema-lutheri_24_10_21_to_01_02_productivity_efficency.csv']\n",
-      "./processed_data\\FPC12-Diacronema-lutheri\n"
+      "Empty DataFrame\n",
+      "Columns: []\n",
+      "Index: []\n",
+      "./processed_data\\FPC11-Rhodomonas-salina\\FPC11-Rhodomonas-salina_12_12_21_to_31_01_22_light_temp_ph.csv\n",
+      "./processed_data\\FPC11-Rhodomonas-salina\\FPC11-Rhodomonas-salina_12_12_21_to_31_01_22_productivity_efficiencycsv.csv\n",
+      "./processed_data\\FPC11-Rhodomonas-salina\\FPC11-Rhodomonas-salina_13_12_21_to_31_01_22_flow_and_pressure.csv\n",
+      "----------------------------------\n",
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Int64Index: 2208 entries, 0 to 2207\n",
+      "Data columns (total 27 columns):\n",
+      " #   Column     Non-Null Count  Dtype  \n",
+      "---  ------     --------------  -----  \n",
+      " 0   Date_Time  2208 non-null   object \n",
+      " 1   QT         2208 non-null   float64\n",
+      " 2   QC         2208 non-null   int64  \n",
+      " 3   QB         2208 non-null   int64  \n",
+      " 4   QR         2208 non-null   int64  \n",
+      " 5   QG         2208 non-null   int64  \n",
+      " 6   QT_corr    2208 non-null   float64\n",
+      " 7   TT0        2208 non-null   float64\n",
+      " 8   TT1        2208 non-null   float64\n",
+      " 9   pH         2208 non-null   float64\n",
+      " 10  LReactor   2208 non-null   float64\n",
+      " 11  C_g        2208 non-null   float64\n",
+      " 12  C_Eff      2208 non-null   float64\n",
+      " 13  C_CD       2208 non-null   float64\n",
+      " 14  T_CD       2208 non-null   int64  \n",
+      " 15  C_D_g      2208 non-null   object \n",
+      " 16  C_D_Eff    2208 non-null   object \n",
+      " 17  FT1        2208 non-null   float64\n",
+      " 18  FT2        2208 non-null   float64\n",
+      " 19  PT1_V4     2208 non-null   float64\n",
+      " 20  PT2        2208 non-null   float64\n",
+      " 21  FT3        2208 non-null   float64\n",
+      " 22  CO2in      2208 non-null   float64\n",
+      " 23  CO2_V2     2208 non-null   float64\n",
+      " 24  CO2sys     2208 non-null   float64\n",
+      " 25  LT1        2208 non-null   float64\n",
+      " 26  C_PAR      2208 non-null   float64\n",
+      "dtypes: float64(19), int64(5), object(3)\n",
+      "memory usage: 483.0+ KB\n",
+      "None\n",
+      "Empty DataFrame\n",
+      "Columns: []\n",
+      "Index: []\n",
+      "./processed_data\\FPC12-Diacronema-lutheri\\FPC12-Diacronema-lutheri_24_10_21_to_01_02_22light_temp_ph.csv\n",
+      "./processed_data\\FPC12-Diacronema-lutheri\\FPC12-Diacronema-lutheri_24_10_21_to_01_02_flow_and_pressure.csv\n",
+      "./processed_data\\FPC12-Diacronema-lutheri\\FPC12-Diacronema-lutheri_24_10_21_to_01_02_productivity_efficency.csv\n",
+      "----------------------------------\n",
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Int64Index: 2208 entries, 0 to 2207\n",
+      "Data columns (total 26 columns):\n",
+      " #   Column     Non-Null Count  Dtype \n",
+      "---  ------     --------------  ----- \n",
+      " 0   Date_Time  2208 non-null   object\n",
+      " 1   QT         2208 non-null   object\n",
+      " 2   QC         2208 non-null   object\n",
+      " 3   QB         2208 non-null   object\n",
+      " 4   QR         2208 non-null   object\n",
+      " 5   QG         2208 non-null   object\n",
+      " 6   QT_corr    2208 non-null   object\n",
+      " 7   TT0        2208 non-null   object\n",
+      " 8   TT1        2208 non-null   object\n",
+      " 9   pH         2208 non-null   object\n",
+      " 10  FT1        2208 non-null   object\n",
+      " 11  FT2        2208 non-null   object\n",
+      " 12  PT1_V4     2208 non-null   object\n",
+      " 13  PT2        2208 non-null   object\n",
+      " 14  FT3        2208 non-null   object\n",
+      " 15  CO2in      2208 non-null   object\n",
+      " 16  CO2_V2     2208 non-null   object\n",
+      " 17  CO2sys     2208 non-null   object\n",
+      " 18  LReactor   2208 non-null   object\n",
+      " 19  C_g        2208 non-null   object\n",
+      " 20  C_Eff      2208 non-null   object\n",
+      " 21  C_CD       2208 non-null   object\n",
+      " 22  T_CD       2208 non-null   object\n",
+      " 23  C_D_g      2208 non-null   object\n",
+      " 24  C_D_Eff    2208 non-null   object\n",
+      " 25  C_PAR      2208 non-null   object\n",
+      "dtypes: object(26)\n",
+      "memory usage: 465.8+ KB\n",
+      "None\n"
      ]
     }
    ],
    "source": [
     "for dir in species_dir_list:\n",
     "    species_dir = os.path.join(processed_dir,dir)\n",
-    "    #print(species_dir)\n",
-    "    #print(dir)\n",
     "    dir = list()\n",
     "    for species_file in os.listdir(species_dir):\n",
-    "        #print(species_file)\n",
     "        dir.append(species_file)\n",
     "    \n",
-    "    #print(dir)\n",
     "    merger_function(dir,species_dir)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
