--- a/test.ipynb
+++ b/test.ipynb
@@ -38,6 +38,51 @@
     "\n",
     "    print('-------------------------')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# write into a file \n",
+    "with open('..\\..\\dataExport\\LOGdata\\_test.csv', 'w', encoding='UTF8') as f:\n",
+    "    f.write(text);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# append a line to previous line if its not starting in stanard format\n",
+    "with open('..\\..\\dataExport\\LOGdata\\log_2022_4_20.csv', 'r+', encoding=\"utf-8\") as file:\n",
+    "    text = str();\n",
+    "    for line in file:\n",
+    "        if line[0:2] == \"20\":\n",
+    "            text = text + '\\n';\n",
+    "        text = text + line.strip();\n",
+    "    file.seek(0);\n",
+    "    file.write(text);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('..\\..\\dataExport\\LOGdata\\log_2022_4_20.csv', 'r+') as file:\n",
+    "    text = str();\n",
+    "    for line in file:\n",
+    "        if line[0:2] == \"20\":\n",
+    "            text = \"{}\\n{}\".format(text, line.strip());\n",
+    "        else:\n",
+    "            text = \"{}{}\".format(text, line.strip());\n",
+    "    file.seek(0);\n",
+    "    file.write(text);"
+   ]
   }
  ],
  "metadata": {
