--- a/WP1/Data_Dashboard/log_unit_parameters_export.ipynb
+++ b/WP1/Data_Dashboard/log_unit_parameters_export.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
@@ -94,7 +94,7 @@
        "Name: Parameter, Length: 162, dtype: int64"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 88,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -105,7 +105,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "FFU            431123\n",
+       "FPC23_FPP23     74100\n",
+       "FPC14           34702\n",
+       "FPC22           33366\n",
+       "FPC12           24002\n",
+       "FPC23           23900\n",
+       "FPC13           23309\n",
+       "FPC11_FPP11     22220\n",
+       "FPC21           21458\n",
+       "FPC11           17302\n",
+       "FPC22_FPP22     15011\n",
+       "FPC12_FPP       14727\n",
+       "FPC21_FPP21     13912\n",
+       "FPC24           12841\n",
+       "FPC31_AUT31      9176\n",
+       "FPC23_AUT23      8951\n",
+       "FPC13_FPP13      8868\n",
+       "FPC13_AUT13      8052\n",
+       "FFP_AUTFU        8019\n",
+       "FPC12_AUT        8012\n",
+       "FPC11_AUT11      8011\n",
+       "FPC22_AUT22      8011\n",
+       "FPC24_AUT24      8006\n",
+       "FFP_FFP          6351\n",
+       "FPC31            5859\n",
+       "FPC21_AUT21      5441\n",
+       "FPC24_FPP24      2782\n",
+       "FPC31_FPP31      2427\n",
+       "Product          1450\n",
+       "FPC42             777\n",
+       "FPC41             777\n",
+       "FPC14_FPP14       513\n",
+       "FPC14_AUT14       404\n",
+       "scheduler         312\n",
+       "FPP11             134\n",
+       "FPP                41\n",
+       "FPP21              12\n",
+       "FPP31               5\n",
+       "FPP14               2\n",
+       "FPP13               2\n",
+       "Name: Unit, dtype: int64"
+      ]
+     },
+     "execution_count": 89,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "log_rawDF['Unit'].value_counts(dropna= False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
@@ -123,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
@@ -138,7 +198,7 @@
        "Name: Type, dtype: int64"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 91,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -149,7 +209,122 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 92,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tmp_1 = log_rawDF.query('Type != (1)')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2    516084\n",
+       "4     67915\n",
+       "6     49397\n",
+       "5     18964\n",
+       "3     10475\n",
+       "Name: Type, dtype: int64"
+      ]
+     },
+     "execution_count": 93,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tmp_1['Type'].value_counts(dropna= False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tmp_1 = tmp_1.query('Unit == (\"FPC11\", \"FPC12\", \"FPC13\", \"FPC14\", \"FPC21\", \"FPC22\", \"FPC23\", \"FPC24\", \"FFU\", \"FPP\", \"Product\", \"scheduler\")')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "FFU        397759\n",
+       "FPC14       28813\n",
+       "FPC22       28040\n",
+       "FPC23       23865\n",
+       "FPC13       23273\n",
+       "FPC21       21445\n",
+       "FPC12       21104\n",
+       "FPC24       12806\n",
+       "FPC11       12719\n",
+       "Product       954\n",
+       "FPP            41\n",
+       "Name: Unit, dtype: int64"
+      ]
+     },
+     "execution_count": 95,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tmp_1['Unit'].value_counts(dropna= False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Int64Index: 570819 entries, 6 to 862517\n",
+      "Data columns (total 9 columns):\n",
+      " #   Column     Non-Null Count   Dtype \n",
+      "---  ------     --------------   ----- \n",
+      " 0   Date_Time  570819 non-null  object\n",
+      " 1   Time       570819 non-null  int64 \n",
+      " 2   MicroSec   570819 non-null  int64 \n",
+      " 3   Type       570819 non-null  int64 \n",
+      " 4   Unit       570819 non-null  object\n",
+      " 5   Parameter  570819 non-null  object\n",
+      " 6   Message    570819 non-null  object\n",
+      " 7   Value1     407015 non-null  object\n",
+      " 8   Value2     485156 non-null  object\n",
+      "dtypes: int64(3), object(6)\n",
+      "memory usage: 43.6+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "tmp_1.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "log_raw = tmp_1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
@@ -158,44 +333,39 @@
        "[]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 98,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "log_rawDF[log_rawDF['Type'].isnull()].index.tolist()"
+    "log_raw[log_raw['Type'].isnull()].index.tolist()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['FPC11_FPP11' 'FPC14' 'FFU' 'FPC22' 'FPC21_AUT21' 'FPC21' 'FPC23' 'FPC13'\n",
-      " 'FPC24' 'FPC31' 'FPC23_FPP23' 'FPC41' 'FPC42' 'FPC11' 'Product'\n",
-      " 'FPC21_FPP21' 'FPC13_FPP13' 'FPC24_FPP24' 'FFP_FFP' 'FPC31_FPP31'\n",
-      " 'FPC22_FPP22' 'FPC12' 'FPP11' 'FPC14_FPP14' 'FPP21' 'FPP13' 'FPP14' 'FPP'\n",
-      " 'FPC12_FPP' 'FPP31' 'FFP_AUTFU' 'FPC13_AUT13' 'FPC22_AUT22' 'FPC11_AUT11'\n",
-      " 'FPC12_AUT' 'FPC31_AUT31' 'FPC24_AUT24' 'FPC23_AUT23' 'scheduler'\n",
-      " 'FPC14_AUT14']\n",
-      "40\n"
+      "['FPC14' 'FFU' 'FPC22' 'FPC21' 'FPC23' 'FPC13' 'FPC24' 'FPC11' 'Product'\n",
+      " 'FPC12' 'FPP']\n",
+      "11\n"
      ]
     }
    ],
    "source": [
-    "log_unit = log_rawDF['Unit'].unique()\n",
+    "log_unit = log_raw['Unit'].unique()\n",
     "print(log_unit)\n",
-    "print(log_rawDF['Unit'].nunique())"
+    "print(log_raw['Unit'].nunique())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [
     {
@@ -209,77 +379,65 @@
     }
    ],
    "source": [
-    "print(log_rawDF['Type'].isna().sum())\n",
-    "print(log_rawDF['Unit'].isna().sum())\n",
-    "print(log_rawDF['Parameter'].isna().sum())"
+    "print(log_raw['Type'].isna().sum())\n",
+    "print(log_raw['Unit'].isna().sum())\n",
+    "print(log_raw['Parameter'].isna().sum())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['Arduino' 'program' 'T61' 'water' 'T10' 'Reactor' 'T71' 'pneumatic'\n",
-      " 'autoSyncMonitor' 'T42A' 'harvest' 'calculations' 'P1L' 'feeding' 'T64'\n",
-      " 'T42' 'T53' 'T51' 'T73' 'T74' 'T65' 'T63' 'T72' 'T52' 'T54' 'PT1_V4'\n",
-      " 'T55' 'T43' 'LEDlighting' 'RM29' 'RM6' 'V74' 'RM12' 'RM13' 'RM14' 'RM15'\n",
-      " 'RM16' 'RM17' 'RM19' 'RM2' 'RM21' 'RM22' 'RM23' 'T41A' 'T43A' 'RM35'\n",
-      " 'RM4' 'RM5' 'RM7' 'P42' 'RM1' 'RM30' 'Arduino_QG' 'Arduino_pH' 'V3' 'P1R'\n",
-      " 'P2R' 'CO2_V2' 'R1' 'PTdiff_K2' 'L1W' 'Arduino_TT1' 'Arduino_LT1'\n",
-      " 'Arduino1_LT52' 'Arduino2_LT72' 'Arduino1_LT41' 'Arduino2_LT61'\n",
-      " 'AutoLink' 'P43' 'V42' 'P10' 'V11' 'V8' 'LT1' 'RM3' 'RM11' 'RM8' 'M1'\n",
-      " 'P2L' 'V61' 'P11' 'Recipes' 'Products' 'L1' 'V6' 'V1' 'V72' 'chiller'\n",
-      " 'T62' 'V71' 'V62' 'P12' 'V43' 'L1FR' 'L1R' 'L1B' 'LT10' 'M10' 'V63'\n",
-      " 'RM18' 'Arduino1' 'V52' 'V64' 'PT10' 'TT0' 'waste' 'V51' 'RM20' 'RM33'\n",
-      " 'AutoTemplateSync' 'Arduino2_LT73' 'Arduino_CO2' 'Arduino2_LT63'\n",
-      " 'Arduino2_LT65' 'Arduino1_LT53' 'Arduino2_LT64' 'Arduino2_LT75'\n",
-      " 'Arduino1_LT54' 'Arduino1_LT45' 'Arduino2_LT74' 'Arduino1_LT55'\n",
-      " 'Arduino2_LT10' 'Arduino2_LT71' 'Arduino_TT0' 'Arduino1_LT42'\n",
-      " 'Arduino1_LT43' 'Arduino1_LT51' 'Arduino2_LT62' 'Arduino2' 'triggers'\n",
-      " 'harvestTank' 'RM10' 'RM24' 'RM25' 'RM26' 'RM27' 'RM28' 'RM31' 'RM32'\n",
-      " 'RM34' 'RM36' 'RM37' 'RM38' 'RM39' 'RM40' 'RM9' 'Arduino_QR' 'Arduino_QB'\n",
-      " 'Arduino_QC' 'P1' 'P2' 'Arduino_PT1' 'Arduino_PT2' 'Arduino_FT2'\n",
-      " 'Arduino_QT' 'T75' 'T41' 'T44' 'T45' 'Arduino1_PT10' 'Arduino1_PT11'\n",
-      " 'Arduino2_noInUse']\n",
-      "162\n"
+      "['program' 'T61' 'water' 'T10' 'Reactor' 'T71' 'pneumatic' 'T42A'\n",
+      " 'harvest' 'calculations' 'P1L' 'feeding' 'T64' 'T42' 'T53' 'T51' 'T73'\n",
+      " 'T74' 'T65' 'T63' 'T72' 'T52' 'T54' 'PT1_V4' 'T55' 'T43' 'LEDlighting'\n",
+      " 'RM29' 'RM6' 'V74' 'RM12' 'RM13' 'RM14' 'RM15' 'RM16' 'RM17' 'RM19' 'RM2'\n",
+      " 'RM21' 'RM22' 'RM23' 'T41A' 'T43A' 'RM35' 'RM4' 'RM5' 'RM7' 'P42' 'RM1'\n",
+      " 'RM30' 'V3' 'P1R' 'P2R' 'CO2_V2' 'R1' 'PTdiff_K2' 'L1W' 'P43' 'V42' 'P10'\n",
+      " 'V11' 'V8' 'LT1' 'RM3' 'RM11' 'RM8' 'M1' 'P2L' 'V61' 'P11' 'Recipes'\n",
+      " 'Products' 'L1' 'V6' 'V1' 'V72' 'chiller' 'T62' 'V71' 'V62' 'P12' 'V43'\n",
+      " 'L1FR' 'L1R' 'L1B' 'Arduino' 'M10' 'V63' 'RM18' 'V52' 'V64' 'PT10' 'TT0'\n",
+      " 'waste' 'V51' 'RM20' 'RM33']\n",
+      "97\n"
      ]
     }
    ],
    "source": [
-    "log_parameter = log_rawDF['Parameter'].unique()\n",
+    "log_parameter = log_raw['Parameter'].unique()\n",
     "print(log_parameter)\n",
-    "print(log_rawDF['Parameter'].nunique())"
+    "print(log_raw['Parameter'].nunique())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "False    847066\n",
-       "True      17302\n",
+       "False    558100\n",
+       "True      12719\n",
        "Name: Unit, dtype: int64"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 102,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "(log_rawDF['Unit']=='FPC11').value_counts()"
+    "(log_raw['Unit']=='FPC11').value_counts()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [
     {
@@ -292,18 +450,18 @@
        "Unit              0\n",
        "Parameter         0\n",
        "Message           0\n",
-       "Value1       453017\n",
-       "Value2       368853\n",
+       "Value1       163804\n",
+       "Value2        85663\n",
        "dtype: int64"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 103,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "log_rawDF.isnull().sum()"
+    "log_raw.isnull().sum()"
    ]
   },
   {
@@ -315,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -325,7 +483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -355,56 +513,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 106,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "ID: {31} unit_name: {'FFP_AUTFU'}\n",
-      "ID: {19} unit_name: {'FFP_FFP'}\n",
-      "ID: {3} unit_name: {'FFU'}\n",
-      "ID: {14} unit_name: {'FPC11'}\n",
-      "ID: {34} unit_name: {'FPC11_AUT11'}\n",
-      "ID: {1} unit_name: {'FPC11_FPP11'}\n",
-      "ID: {22} unit_name: {'FPC12'}\n",
-      "ID: {35} unit_name: {'FPC12_AUT'}\n",
-      "ID: {29} unit_name: {'FPC12_FPP'}\n",
-      "ID: {8} unit_name: {'FPC13'}\n",
-      "ID: {32} unit_name: {'FPC13_AUT13'}\n",
-      "ID: {17} unit_name: {'FPC13_FPP13'}\n",
-      "ID: {2} unit_name: {'FPC14'}\n",
-      "ID: {40} unit_name: {'FPC14_AUT14'}\n",
-      "ID: {24} unit_name: {'FPC14_FPP14'}\n",
-      "ID: {6} unit_name: {'FPC21'}\n",
-      "ID: {5} unit_name: {'FPC21_AUT21'}\n",
-      "ID: {16} unit_name: {'FPC21_FPP21'}\n",
-      "ID: {4} unit_name: {'FPC22'}\n",
-      "ID: {33} unit_name: {'FPC22_AUT22'}\n",
-      "ID: {21} unit_name: {'FPC22_FPP22'}\n",
-      "ID: {7} unit_name: {'FPC23'}\n",
-      "ID: {38} unit_name: {'FPC23_AUT23'}\n",
-      "ID: {11} unit_name: {'FPC23_FPP23'}\n",
-      "ID: {9} unit_name: {'FPC24'}\n",
-      "ID: {37} unit_name: {'FPC24_AUT24'}\n",
-      "ID: {18} unit_name: {'FPC24_FPP24'}\n",
-      "ID: {10} unit_name: {'FPC31'}\n",
-      "ID: {36} unit_name: {'FPC31_AUT31'}\n",
-      "ID: {20} unit_name: {'FPC31_FPP31'}\n",
-      "ID: {12} unit_name: {'FPC41'}\n",
-      "ID: {13} unit_name: {'FPC42'}\n",
-      "ID: {28} unit_name: {'FPP'}\n",
-      "ID: {23} unit_name: {'FPP11'}\n",
-      "ID: {26} unit_name: {'FPP13'}\n",
-      "ID: {27} unit_name: {'FPP14'}\n",
-      "ID: {25} unit_name: {'FPP21'}\n",
-      "ID: {30} unit_name: {'FPP31'}\n",
-      "ID: {15} unit_name: {'Product'}\n",
-      "ID: {39} unit_name: {'scheduler'}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# selecting all elements from table - tbl_unit\n",
     "cur.execute(\"SELECT unit_id, unit_name FROM tbl_unit\")\n",
@@ -427,9 +538,9 @@
    "outputs": [],
    "source": [
     "# inserting list of parameters into DB table : tbl_parameters\n",
-    "query = 'INSERT IGNORE INTO tbl_log_parameters (prm_id, prm_name) VALUES (%s, %s)'\n",
-    "tuples = pd.Series(log_parameter)\n",
-    "tuples = [(index+1, value) for index, value in tuples.items()]"
+    "#query = 'INSERT IGNORE INTO tbl_log_parameters (prm_id, prm_name) VALUES (%s, %s)'\n",
+    "#tuples = pd.Series(log_parameter)\n",
+    "#tuples = [(index+1, value) for index, value in tuples.items()]"
    ]
   },
   {
@@ -438,8 +549,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cur.executemany(query, tuples)\n",
-    "con.commit() "
+    "#cur.executemany(query, tuples)\n",
+    "#con.commit() "
    ]
   },
   {
@@ -451,7 +562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -463,7 +574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -473,7 +584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [],
    "source": [
