--- a/WP1/data_cleaning_DBexport/_1_log/log_dbexport.ipynb
+++ b/WP1/data_cleaning_DBexport/_1_log/log_dbexport.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -79,43 +79,43 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>31</td>\n",
-       "      <td>FFP_AUTFU</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>19</td>\n",
-       "      <td>FFP_FFP</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>3</td>\n",
+       "      <td>2</td>\n",
        "      <td>FFU</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>14</td>\n",
+       "      <th>1</th>\n",
+       "      <td>8</td>\n",
        "      <td>FPC11</td>\n",
        "    </tr>\n",
        "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>10</td>\n",
+       "      <td>FPC12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>6</td>\n",
+       "      <td>FPC13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>34</td>\n",
-       "      <td>FPC11_AUT11</td>\n",
+       "      <td>1</td>\n",
+       "      <td>FPC14</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   unit_id    unit_name\n",
-       "0       31    FFP_AUTFU\n",
-       "1       19      FFP_FFP\n",
-       "2        3          FFU\n",
-       "3       14        FPC11\n",
-       "4       34  FPC11_AUT11"
+       "   unit_id unit_name\n",
+       "0        2       FFU\n",
+       "1        8     FPC11\n",
+       "2       10     FPC12\n",
+       "3        6     FPC13\n",
+       "4        1     FPC14"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -195,7 +195,7 @@
        "4     126  Arduino1_LT43"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
